Fix Bug 292418 - Kmail can't create IMAP top level folders

FIXED-IN: 4.8.5
BUG: 292418
(cherry picked from commit 4b120f8a875fb5fa27039998ad3b8aec17a2885d)